--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
     <title>Document</title>
 </head>
 <body>
+    <!-- Login form is added here -->
+    Login form 
 
     <script>app.js</script>
 </body>
